<resources>
    <string name="app_name">Spezl</string>
    <string name="text_password">Passwort</string>
    <string name="text_email">Email</string>
    <string name="text_login">Los spezln!</string>
    <string name="text_no_account">Noch keinen Account? Registriere dich jetzt!</string>
    <string name="text_check_password">Passwort erneut eingeben</string>
    <string name="text_name">Name</string>
    <string name="text_first_name">Vorname</string>
    <string name="text_last_name">Nachname</string>
    <string name="text_age">Geburtsdatum</string>
    <string name="text_town">Stadt</string>
    <string name="text_register">Registrieren</string>
    <string name="header">Header</string>
    <string name="text_create_event">Event erstellen</string>
    <string name="text_join_event">Event beitreten</string>

    <string name="text_relax">Entspannt</string>
    <string name="text_party">Feiern</string>
    <string name="text_sport">Sport</string>
    <string name="text_cook">Kochen</string>
    <string name="text_discussion">Diskussion</string>
    <string name="text_culture">Kultur</string>

    <string name="text_date">Datum (Heute, morgen, übermorgen)</string>
    <string name="text_start_time">Startzeit</string>
    <string name="text_end_time">Endzeit</string>
    <string name="text_duration">Dauer</string>
    <string name="text_oclock">&#160;Uhr</string>
    <string name="auth_failed">Da ist etwas schief gelaufen.</string>
    <string name="auth_weak_password">Das Passwort ist leider zu schwach!</string>
    <string name="auth_invalid_email">Deine Email ist leider nicht gültig</string>
    <string name="auth_user_exists">Für diese Mailadresse existiert bereits ein Account.</string>
    <string name="logout">Logout</string>
    <string name="text_description_label">Beschreibung</string>
    <string name="text_description">Beschreibung - Wie hast du dir dein Event vorgestellt?</string>
    <string name="text_time">Uhrzeit</string>
    <string name="text_max_participants">Zähle dich selbst auch als Teilnehmer</string>
    <string name="text_delete_tag">Delete Tag</string>
    <string name="text_new">Neu</string>
    <string name="text_tag">Tags</string>
    <string name="text_female">Weiblein</string>
    <string name="text_male">Männlein</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="text_welcome">Hi Spezl</string>
    <string name="text_new_login">Schon ein Spezl</string>
    <string name="text_new_register">Neu hier?</string>
    <string name="text_profile">Profil</string>
    <string name="text_new_event">Neues Event</string>
    <string name="text_settings">Einstellungen</string>
    <string name="text_logout">Logout</string>
    <string name="text_address">Adresse</string>
    <string name="text_category">Kategorie</string>
    <string name="text_show_password">Passwort anzeigen</string>
    <string name="text_show_check_password">Passwort anzeigen</string>
    <string name="text_old_password">Altes Passwort</string>
    <string name="text_change_password">Passwort ändern</string>
    <string name="text_reset_password">Passwort vergessen? Setze dein Passwort zurück.</string>
    <string name="text_reset_password_short">Passwort ändern</string>
    <string name="text_new_password">Neues Passwort</string>
    <string name="text_check_new_password">Neues Passwort erneut eingeben</string>
    <string name="text_agb_confirmation"><u>Ich bestätige, Datenschutzerklärung und Nutzungsbedingungen gelesen zu haben.</u></string>
    <string name="text_place">Ortsbeschreibung z.B. Nightclub, Laura’s Garten, Cafe, …</string>
    <string name="text_cancel">Nein, doch nicht.</string>
    <string name="text_continue">Ja, weiter gehts!</string>
    <string name="text_delete_user">Benutzer löschen</string>
    <string name="text_my_event">Meine Events</string>
    <string name="text_place_short">Ort</string>
    <string name="text_participants">Teilnehmer</string>
    <string name="text_owner">Ersteller</string>
    <string name="text_agb">Datenschutz und Nutzung</string>
    <string name="text_change_profile">Profil ändern</string>
    <string name="text_accept">Übernehmen</string>
    <string name="text_change_profile_label">Zum Ändern deiner Profildaten drücke auf den Button</string>

    <string name="long_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam Lorem ipsum dolor sit amet, consetetur sadipscing elit Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</string>
    <string name="text_admin_delete_event">[Admin] Event löschen</string>
    <string name="text_new_here">Neu hier ...</string>
    <string name="text_welcome_back">Willkommen zurück</string>
    <string name="text_next">Weiter</string>
    <string name="text_skip">Überspringen</string>
    <string name="text_welcome_slide">Willkommen bei Spezl</string>
    <string name="text_choose_category">Wähle eine Kategorie!</string>
    <string name="text_welcome_slide_3">Erstelle ein neues Event oder nimm an bereits erstellen teil!</string>
    <string name="text_welcome_slide_4">Nimm nur mit einem Klick teil</string>
    <string name="text_intro">Zeige das Intro</string>
</resources>
