<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/userFunctionGroup">
        <item
            android:id="@+id/resetPassword"
            android:icon="@drawable/ic_action_lock_open"
            android:title="@string/text_reset_password_short" />

        <item
            android:id="@+id/createEvent"
            android:icon="@drawable/ic_action_add"
            android:title="@string/text_new_event" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/text_settings" />
    </group>

    <group android:id="@+id/logoutGroup">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/text_logout" />
    </group>
</menu>