<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tologin_button"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tologin_button"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textSize="16pt" />

    <Button
        android:id="@+id/tologin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="?attr/selectableItemBackground"
        android:onClick="toLoginActivity"
        android:text="@string/text_new_login"
        android:layout_above="@+id/toregister_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/toregister_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tologin_button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tologin_button"
        android:background="?attr/selectableItemBackground"
        android:onClick="toRegisterActivity"
        android:text="@string/text_new_register" />


</RelativeLayout>
