<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_date"
                android:focusable="false"
                android:longClickable="false"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_start_time"
                android:longClickable="false"
                android:focusable="false"
                android:inputType="time" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_duration"
                android:longClickable="false"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>